...
                                  ),),
                                ),
                              ),
                            ),
                            const Spacer(),
                            GestureDetector(
                              key: const Key('navigate_to_sign_in_button'),
                              onTap: () => {
                                Navigator.push(
                                  context,
                                  MaterialPageRoute(
                                    builder: (context) => SignIn(),
                                  ),
...
