...
              onPressed: () {
                Navigator.pop(context);
              },
            ),
          Expanded(
            child: SearchBar(
              key: const Key('search_bar'),
              hintText: 'Search',
              onChanged: (query) {
                if (!mounted) return;
                setState(() {
                  searchText = query;
                });
...
