...
                          ),
                          // Ikony po prawej
                          Row(
                            mainAxisSize: MainAxisSize.min,
                            children: [
                              IconButton(
                                key: const Key('favorite_button'),
                                icon: Icon(
                                  _isFavourite
                                      ? Icons.favorite
                                      : Icons.favorite_border,
                                  color:
                                      Theme.of(
...
